--- a/index.html
+++ b/index.html
@@ -2,446 +2,43 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>johnbthe.dev | Junior Web Developer Portfolio</title>
-    <!-- Favicon -->
-    <link rel="icon" href="images/favicon.png" type="image/x-icon" />
-    <!-- Latest compiled and minified CSS -->
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    />
-    <!-- Font Awesome Icons -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
-      integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <!-- Custom Font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="styles/style.css" />
-
-    <!-- Animate on Scroll -->
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="stylesheet" href="output.css" />
+    <link rel="icon" href="favicon.png" type="image/x-icon" />
+    <title>johnbthe.dev | Under Construction</title>
   </head>
-  <body>
-    <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-color-card">
-      <a class="navbar-brand" href="#"
-        ><i class="fa-solid fa-terminal"></i> johnbthe.dev</a
+  <body class="bg-gray-50">
+    <section class="bg-gray-50">
+      <div
+        class="mx-auto max-w-screen-xl px-4 py-32 lg:flex lg:h-screen lg:items-center"
       >
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="#about">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#services">Services</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#portfolio">Portfolio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#contact">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-
-    <!-- Header -->
-    <header
-      class="jumbotron jumbotron-fluid bg-color-section"
-      data-aos="fade-down"
-      data-aos-duration="3000"
-    >
-      <div class="container">
-        <h1 class="display-5" data-aos="fade-down" data-aos-duration="3000">
-          <p class="no-margin">
-            johnBouakhasith: <span class="typed-text"></span
-            ><span class="cursor">&nbsp;</span>
-          </p>
-        </h1>
-        <p class="lead no-margin" data-aos="fade-down" data-aos-duration="3000">
-          Welcome to my portfolio. Here you can find information about my skills
-          and projects.
-        </p>
-      </div>
-    </header>
-
-    <!-- About Section -->
-    <section id="about" class="py-5 text-justify">
-      <div class="container">
-        <div class="row align-items-center">
-          <div
-            class="col-sm-12 col-md-12 col-lg-6"
-            data-aos="fade-right"
-            data-aos-duration="3000"
-          >
-            <h2 data-aos="fade-right" data-aos-duration="3000">About Me</h2>
-            <p>
-              👋 Hello there! My name is John Bouakhasith and I am a junior web
-              developer with expertise in HTML, CSS, JavaScript, and various web
-              development frameworks. My passion lies in creating visually
-              appealing and highly functional websites that provide an optimal
-              user experience.
-            </p>
-            <p>
-              I am primarily self-taught, utilizing resources such as
-              FreeCodeCamp, YouTube, and The Odin Project to hone my skills. In
-              addition, I have some experience working with React and PHP, and
-              I'm always eager to expand my knowledge.
-            </p>
-
-            <p>
-              When I'm not coding, you can find me indulging in my other
-              interests. I enjoy playing PC games, watching TV shows and sports,
-              traveling when possible, and spending quality time with my furry
-              feline companions - Kevin and Calvin.
-            </p>
-
-            <p class="no-margin bottom-margin">
-              Below, you can see some examples of my work. Please feel free to
-              reach out if you have any questions or inquiries!
-            </p>
-          </div>
-          <div
-            class="col-md-12 col-lg-6 avatar"
-            data-aos="zoom-in"
-            data-aos-duration="3000"
-          >
-            <img
-              src="images/avatar.png"
-              alt="Profile Picture"
-              class="img-fluid float"
-            />
-            <!-- <div
-              id="slides"
-              class="carousel slide carousel-fade float"
-              data-ride="carousel"
+        <div class="mx-auto max-w-xl text-center">
+          <h1 class="text-3xl font-extrabold sm:text-4xl">
+            Hi. I'm John Bouakhasith,
+            <strong
+              class="bg-gradient-to-r from-green-300 via-blue-500 to-purple-600 bg-clip-text text-3xl font-extrabold text-transparent sm:text-4xl sm:block"
             >
-              <div class="carousel-inner round">
-                <div class="carousel-item active">
-                  <img src="images/kevin.png" class="d-block w-100 img-fluid""
-                  alt="Kevin" />
-                </div>
-                <div class="carousel-item">
-                  <img src="images/calvin.png" class="d-block w-100 img-fluid""
-                  alt="Calvin" />
-                </div>
-                <div class="carousel-item">
-                  <img src="images/cats.png" class="d-block w-100 img-fluid""
-                  alt="Both fat cats" />
-                </div>
-              </div>
-            </div> -->
+              Self-Taught Web Developer.
+            </strong>
+          </h1>
+
+          <p class="mt-4 sm:text-xl sm:leading-relaxed">
+            Please excuse the inconvenience as my website is currently under
+            construction. If you'd like to keep in touch, please click the
+            button below. Thank you for your patience!
+          </p>
+
+          <div class="mt-8 flex flex-wrap justify-center gap-4">
+            <a
+              class="block w-full rounded border border-blue-600 bg-blue-600 px-12 py-3 text-sm font-medium text-white sm:w-auto"
+              href="mailto:hi@johnbthe.dev"
+            >
+              Contact Me
+            </a>
           </div>
         </div>
       </div>
     </section>
-
-    <!-- Services Section -->
-    <section id="services" class="py-5 bg-color-section" data-aos="fade-up">
-      <div class="container">
-        <div class="row">
-          <div
-            class="col-md-12 pb-2"
-            data-aos="fade-right"
-            data-aos-duration="3000"
-          >
-            <h2>My Services</h2>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12 col-lg-4 mb-4" data-aos="fade-up">
-            <div>
-              <div class="card-body bg-color-card">
-                <h5 class="card-title">🎨 Web Design</h5>
-                <p class="card-text" data-aos="zoom-in">
-                  I create visually appealing and user-friendly designs for
-                  websites and web applications.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-12 col-lg-4 mb-4" data-aos="fade-up">
-            <div>
-              <div class="card-body bg-color-card">
-                <h5 class="card-title">👨🏻‍💻 Web Development</h5>
-                <p class="card-text" data-aos="zoom-in">
-                  I develop custom websites and web applications using HTML,
-                  CSS, JavaScript, and various web development frameworks.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-12 col-lg-4" data-aos="fade-up">
-            <div>
-              <div class="card-body bg-color-card">
-                <h5 class="card-title">📱 Responsive Design</h5>
-                <p class="card-text" data-aos="zoom-in">
-                  I ensure that all my designs are responsive and optimized for
-                  different devices and screen sizes.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Portfolio Section -->
-    <section id="portfolio" class="py-5 text-justify">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12" data-aos="fade-right" data-aos-duration="3000">
-            <h2>My Portfolio</h2>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12 col-lg-4 mb-4" data-aos="fade-up">
-            <div>
-              <img
-                src="images/browser-tab.png"
-                class="card-img-top"
-                alt="Project 1"
-              />
-              <div class="card-body bg-color-card">
-                <h5 class="card-title" data-aos="fade-right">myLibrary</h5>
-                <p class="card-text" data-aos="zoom-in">
-                  A personalized reading list application using JavaScript,
-                  allowing users to create, track, and customize their reading
-                  lists. I leveraged the Web Storage API to store the reading
-                  list object locally as a string, enabling the app to remember
-                  the user's choices when they return to the site.
-                </p>
-                <a
-                  href="https://johnbdot.github.io/library/"
-                  target="_blank"
-                  class="btn btn-dark"
-                  data-aos="fade-down"
-                  >View Project</a
-                >
-              </div>
-            </div>
-          </div>
-          <div class="col-md-12 col-lg-4 mb-4" data-aos="fade-up">
-            <div>
-              <img
-                src="images/browser-tab.png"
-                class="card-img-top"
-                alt="Project 2"
-              />
-              <div class="card-body bg-color-card">
-                <h5 class="card-title" data-aos="fade-right">Etch-A-Sketch</h5>
-                <p class="card-text" data-aos="zoom-in">
-                  An intuitive sketch pad application using HTML5, CSS3, and
-                  JavaScript to showcase my ability to manipulate the Document
-                  Object Model (DOM) effectively. The application allows users
-                  to select a pixel size and color to draw with, as well as
-                  clear the area with an eraser tool.
-                </p>
-                <a
-                  href="https://johnbdot.github.io/etch-a-sketch/"
-                  target="_blank"
-                  class="btn btn-dark"
-                  data-aos="fade-down"
-                  >View Project</a
-                >
-              </div>
-            </div>
-          </div>
-          <div class="col-md-12 col-lg-4 mb-4" data-aos="fade-up">
-            <div>
-              <img
-                src="images/browser-tab.png"
-                class="card-img-top"
-                alt="Project 3"
-              />
-              <div class="card-body bg-color-card">
-                <h5 class="card-title" data-aos="fade-right">
-                  Rock, Paper, Scissors
-                </h5>
-                <p class="card-text" data-aos="zoom-in">
-                  An interactive game using HTML5, CSS3, and JavaScript, which
-                  challenges two users to compete and determine the best out of
-                  7 wins. I implemented JavaScript to handle user input and
-                  determine the winner of each round based on the game's rules
-                  using logical constructs like if-else statements.
-                </p>
-                <a
-                  href="https://johnbdot.github.io/rock-paper-scissors/"
-                  target="_blank"
-                  class="btn btn-dark"
-                  data-aos="fade-down"
-                  >View Project</a
-                >
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12 col-lg-4 mb-4" data-aos="fade-up">
-            <div>
-              <img
-                src="images/browser-tab.png"
-                class="card-img-top"
-                alt="Project 3"
-              />
-              <div class="card-body bg-color-card">
-                <h5 class="card-title" data-aos="fade-right">Calculator</h5>
-                <p class="card-text" data-aos="zoom-in">
-                  I developed a basic calculator application using HTML, CSS,
-                  and JavaScript. The calculator features a display area for
-                  input and output, as well as a set of buttons for arithmetic
-                  operations and numbers. Through this project, I honed my
-                  skills in HTML for layout, CSS for styling, and JavaScript for
-                  handling user interactions and performing calculations.
-                </p>
-                <a
-                  href="https://johnbdot.github.io/calculator/"
-                  target="_blank"
-                  class="btn btn-dark"
-                  data-aos="fade-down"
-                  >View Project</a
-                >
-              </div>
-            </div>
-          </div>
-          <div class="col-md-12 col-lg-4 mb-4" data-aos="fade-up">
-            <div>
-              <img
-                src="images/browser-tab.png"
-                class="card-img-top"
-                alt="Project 3"
-              />
-              <div class="card-body bg-color-card">
-                <h5 class="card-title" data-aos="fade-right">Coming Soon</h5>
-                <p class="card-text" data-aos="zoom-in">
-                  I am currently working on a WooCommerce website. Please check
-                  back soon for updates!
-                </p>
-                <a href="#" target="" class="btn btn-dark" data-aos="fade-down"
-                  >View Project</a
-                >
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact" class="pb-5">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12" data-aos="fade-right" data-aos-duration="3000">
-            <h2>Contact Me</h2>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6 cold-lg-4" data-aos="fade-up">
-            <form class="bottom-margin">
-              <div class="form-group">
-                <label for="name">Name</label>
-                <input type="text" class="form-control" id="name" required />
-              </div>
-              <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" class="form-control" id="email" required />
-              </div>
-              <div class="form-group">
-                <label for="message">Message</label>
-                <textarea
-                  class="form-control"
-                  id="message"
-                  rows="5"
-                  required
-                ></textarea>
-              </div>
-              <button type="submit" class="btn btn-dark" disabled>
-                Submit
-              </button>
-            </form>
-          </div>
-          <div class="col-md-6 cold-lg-4" data-aos="fade-up">
-            <div>
-              <div class="card-body bg-color-card">
-                <h5 class="card-title">Contact Information</h5>
-                <p class="card-text">
-                  <s>Feel free to contact me via the form</s> and follow me on
-                  any of the following social media platforms:
-                </p>
-                <ul class="list-unstyled">
-                  <li>
-                    <a href="mailto:hi@johnbthe.dev"
-                      ><i class="fa-solid fa-envelope"></i> Email</a
-                    >
-                  </li>
-                  <li>
-                    <a href="https://github.com/johnbdot"
-                      ><i class="fa-brands fa-github"></i> GitHub</a
-                    >
-                  </li>
-                  <li>
-                    <a href="https://www.linkedin.com/in/johnbdot/"
-                      ><i class="fa-brands fa-linkedin"></i> LinkedIn</a
-                    >
-                  </li>
-                  <li>
-                    <a href="https://www.instagram.com/johnbdot/"
-                      ><i class="fa-brands fa-instagram"></i> Instagram</a
-                    >
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Footer -->
-    <footer class="bg-color-card text-white pt-3">
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-md-12">
-            <p class="text-center">
-              Copyright © 2023 John Bouakhasith - johnbthe.dev. Made with HTML,
-              CSS, JS, Bootstrap, Sweat, and Tears.
-            </p>
-          </div>
-        </div>
-      </div>
-    </footer>
-
-    <!-- Latest compiled JavaScript -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-      AOS.init();
-    </script>
-    <script src="js/app.js"></script>
   </body>
 </html>
